# secret-scanner-fast

./: .pre-commit-hooks.yaml  Cargo.toml  README.md
benches/: scanning.rs
scripts/: install-hook.sh
src/: lib.rs  main.rs
src/cli/: args.rs
src/config/: env.rs  loader.rs  mod.rs  schema.rs
src/detection/: allowlist.rs  context.rs  entropy.rs  matcher.rs  mod.rs  patterns.rs  remediation.rs  rules.rs
src/output/: csv.rs  finding.rs  json.rs  mod.rs  sarif.rs  text.rs
src/scanner/: baseline.rs  blame.rs  engine.rs  file_scanner.rs  filter.rs  git_scanner.rs  mod.rs  stream.rs  verify.rs
src/utils/: binary.rs
tests/: cli.rs
