[package]
name = "secret-scanner-fast"
version = "0.1.0"
edition = "2021"
description = "High-performance secret scanner for codebases"
license = "MIT"
repository = "https://github.com/sudokatie/secret-scanner-fast"
keywords = ["security", "secrets", "git", "scanner"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rayon = "1"
git2 = "0.18"
ignore = "0.4"
globset = "0.4"
walkdir = "2"
termcolor = "1"
sha2 = "0.10"
thiserror = "1"
hex = "0.4"
chrono = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = "0.5"

[[bench]]
name = "scanning"
harness = false
